# ChangeLog for dev-util/qt-creator
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

 *qt-creator-1.0.0 (03 Mar 2009)

  03 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-creator-1.2.90.ebuild:
  On tree

*qt-creator-1.2.90 (16 Sep 2009)

  16 Sep 2009; Dominik Kapusta <ayoy@gentoo.org> +qt-creator-1.2.90.ebuild,
  qt-creator-9999.ebuild, files/docs_gen.patch:
  Added 1.2.90 Technology Snapshot: new cvs plugin and French translation.
  Live ebuild dependent on Qt 4.6.

  01 Sep 2009; Dror Levin <spatz@psybear.com> files/docs_gen.patch:
  Update patch for docs generation following upstream code changes.

  30 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Fix binary installation

  29 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Backport fix from bug 275859

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Ebuild clean up and fixes

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Remove my broken sed

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-creator-1.2.0.ebuild:
  On tree

  27 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Fix src_prepare

  27 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild, qt-creator-9999.ebuild, metadata.xml:
  Synchronize ebuilds, and clean up

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Apply translations code on live ebuild

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild:
  Fixing translation once again

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild, qt-creator-9999.ebuild, metadata.xml:
  Fix translations installation, fix share path definition, fix
  documentation
  installation, add more plugin use flags, clean up

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild:
  Fix menu icon
