@@ -1,4 +1,5 @@
 AUX docs_gen.patch 656 RMD160 fc7a67d7beffa50bd2b38609fce7b24b67f53c63 SHA1 a60d8d9c12ec741175f53519f54613ce13812f12 SHA256 d11b76c45a754b96bff947d1e56d2ca7b470deb4e6d3db5316de59d11207de8d
+EBUILD qt-creator-1.3.0_beta.ebuild 2918 RMD160 d4317c91364b637339ca0595dff530bc82bda944 SHA1 8bc086ba7688a6a27ada7fb4077571b5d8073a50 SHA256 d60fdbe5b132383b8927bfbafd2b1e683d0532ba42650889d2dbdf79091abb6c
 EBUILD qt-creator-9999.ebuild 2870 RMD160 e2e475a704be1e85c25cf60bc5afc7850ff2ef88 SHA1 8b42a0179f606f5182c1f7e7d85f2193183172ed SHA256 04cd933d20eb2d5bac774de610fe69c222aa9e341ed09b42c46143b39e8fcadc
-MISC ChangeLog 8245 RMD160 d186d0cf3dd6230b7b00e8f85675389b1ca0bb0b SHA1 abd5e505eb02fbb4fff80e8eb5ceeaebaf94f01d SHA256 90a74f397c7ea07ff51aa7e9d9bf5e61cfa99ac08e9adce4fbe6f23db36b62d6
+MISC ChangeLog 8365 RMD160 79a919ac77b82caa79fa0c3ed64156c5637f353e SHA1 3458d8aa305348bfab2627b57e1e4cf9514cfe96 SHA256 f33d96f91c929f28d27243db7eaec86b55b0bdb5cce72ac7ac4dbde79f5e12b7
 MISC metadata.xml 895 RMD160 8801ac01fc39baecabe094b64ba41a6a5c7c597f SHA1 e7b045c7ba1bec8eced17bbe88fc25eae5777bbe SHA256 4d5ebb9d910fb447d8082a845269c1cfca0f3891b7acfe50a7f27e124501eddb
